fixed rest authentication and transferred filter beans to core

--- a/samples/core/src/main/resources/static/index.html
+++ b/samples/core/src/main/resources/static/index.html
@@ -10,5 +10,11 @@
 	<a href="services/">Services Overview (CXF)</a>
   <br/>
 	<a href="services/rest/tablemanagement/v1/table/101">1. Table</a>
+  <br/>
+  <br/>
+
+  <form method="POST" action="logout">
+    <button>logout</button>
+  </form>
 </body>
 </html>
